deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployement
  labels:
    app: python-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-test
  template:
    metadata:
      labels:
        app: python-test
    spec:
      containers:
        - name: python-test
          image: ankitvicky72/k8sapp
          ports:
          - containerPort: 80
