stage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stage-python-service
  labels:
    app: stage-python-service
    service: stage-python-service
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: python-test
  type: LoadBalancer
