dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "dev.ankitkhatri.tk"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dev-service
            port:
              number: 80
