ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service :
            Name: dev-python-service
            port: 
              number: 80
      - path: /production
        backend:
          service: 
            Name: prod-python-service
            port: 
              number: 80
      - path: /stage
        backend:
          service: 
            Name: stage-python-service
            port: 
              number: 80
