prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "prod.ankitkhatri.tk"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prod-service
            port:
              number: 80
